@@ -102,6 +102,12 @@ public class StreamInSession extends AbstractStreamSession
         return session;
     }
 
+    public static boolean hasSession(InetAddress host, long sessionId)
+    {
+        Pair<InetAddress, Long> context = new Pair<InetAddress, Long>(host, sessionId);
+        return sessions.get(context) != null;
+    }
+
     public void setCurrentFile(PendingFile file)
     {
         this.current = file;
